# scistudio-blocks-spectroscopy

./: CHANGELOG.md  README.md  pyproject.toml
docs/: package-overview.md
src/scistudio_blocks_spectroscopy/: __init__.py  _support.py  types.py
src/scistudio_blocks_spectroscopy/blocks/: __init__.py  feature_extraction.py  library_matching.py  peak_fitting.py  preprocessing.py  reference_correction.py  unmixing.py  utilities.py
src/scistudio_blocks_spectroscopy/blocks/io_handlers/: __init__.py  dataset_formats.py  spectrum_formats.py
src/scistudio_blocks_spectroscopy/previewers/: __init__.py  providers.py
src/scistudio_blocks_spectroscopy/previewers/assets/: viewer.js
tests/: conftest.py  test_analysis_smoke.py  test_feat_smoke.py  test_feature_extraction_blocks.py  test_format_capabilities.py  test_io_coverage_spectroscopy.py  test_io_dataset_smoke.py  test_io_spectrum_smoke.py  test_library_matching_blocks.py  test_ota_contract.py  test_packaging.py  test_peak_fitting_blocks.py  test_pre_smoke.py  test_preprocessing_blocks.py  test_preprocessing_fit_outputs.py  test_prev_smoke.py  test_previewer_registration.py  test_readme_blocks.py  test_reference_correction_blocks.py  test_spectral_dataset_io.py  test_spectral_dataset_previewer.py  test_spectrum_io.py  test_spectrum_previewer.py  test_support.py  test_types.py  test_unmixing_blocks.py  test_util_smoke.py  test_utility_blocks.py
tests/e2e/: __init__.py  conftest.py  fixtures.py  test_e2e_chained_workflows.py  test_e2e_feature_extraction.py  test_e2e_io.py  test_e2e_library_matching.py  test_e2e_peak_fitting.py  test_e2e_preprocessing.py  test_e2e_previewers.py  test_e2e_reference_correction.py  test_e2e_unmixing.py  test_e2e_utilities.py
