[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "scistudio-blocks-spectroscopy"
version = "0.1.0"
description = "General 1-D spectroscopy blocks (Raman, FTIR, UV-Vis, fluorescence, NIR) for SciStudio."
readme = "README.md"
authors = [
    {name = "SciStudio Contributors"},
]
requires-python = ">=3.11"
dependencies = [
    "scistudio>=0.2.1a0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.2",
    "pyarrow>=15",
    "pydantic>=2.0",
    "openpyxl>=3.1",
]

[project.entry-points."scistudio.blocks"]
spectroscopy = "scistudio_blocks_spectroscopy:get_block_package"

[project.entry-points."scistudio.types"]
spectroscopy = "scistudio_blocks_spectroscopy:get_types"

[project.entry-points."scistudio.previewers"]
spectroscopy = "scistudio_blocks_spectroscopy.previewers:get_previewers"

[tool.hatch.build.targets.wheel]
packages = ["src/scistudio_blocks_spectroscopy"]
artifacts = [
    "src/scistudio_blocks_spectroscopy/previewers/assets/*.js",
    "src/scistudio_blocks_spectroscopy/previewers/assets/*.mjs",
    "src/scistudio_blocks_spectroscopy/previewers/assets/*.css",
    "src/scistudio_blocks_spectroscopy/previewers/assets/*.svg",
]

[tool.pytest.ini_options]
markers = [
    "requires_scipy: needs the scipy runtime dependency",
]
