[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "scistudio-blocks-spectroscopy"
version = "0.1.0"
description = "General 1-D spectroscopy blocks (Raman, FTIR, UV-Vis, fluorescence, NIR) for SciStudio."
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "SciStudio Contributors"},
]
requires-python = ">=3.11"
dependencies = [
    "scistudio>=0.2.1a0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.2",
    "pyarrow>=15",
    "pydantic>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "mypy>=1.10",
    "build>=1.2",
]

[project.entry-points."scistudio.blocks"]
spectroscopy = "scistudio_blocks_spectroscopy:get_block_package"

[project.entry-points."scistudio.types"]
spectroscopy = "scistudio_blocks_spectroscopy:get_types"

[project.entry-points."scistudio.previewers"]
spectroscopy = "scistudio_blocks_spectroscopy.previewers:get_previewers"

# OTA hot-update source (#1784). Publish-time source of truth for
# scripts/ota_publish.py; mirrored in PackageInfo.ota (src/.../__init__.py),
# enforced equal by scripts/validate_contract.py.
[tool.scistudio.ota]
manifest_url = "https://github.com/jiazhenz026/scistudio-blocks-spectroscopy/releases/download/ota-alpha/manifest.json"
channel = "alpha"
min_core_base = "0.2.1"

[tool.hatch.build.targets.wheel]
packages = ["src/scistudio_blocks_spectroscopy"]
artifacts = [
    "src/scistudio_blocks_spectroscopy/previewers/assets/*.js",
    "src/scistudio_blocks_spectroscopy/previewers/assets/*.mjs",
    "src/scistudio_blocks_spectroscopy/previewers/assets/*.css",
    "src/scistudio_blocks_spectroscopy/previewers/assets/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_scipy: needs the scipy runtime dependency",
]

# Lint/format/type config mirrors SciStudio core so authors get the same
# feedback locally as in the monorepo.
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.isort]
known-first-party = ["scistudio_blocks_spectroscopy"]

[tool.mypy]
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
ignore_missing_imports = true
